<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="TOPPINGS"
               android:layout_marginBottom="24dp"/>

           <CheckBox
               android:id="@+id/whipped_cream_checkbox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/whippedCreamString"
               android:textSize="16sp"
               android:paddingLeft="24dp"
               android:layout_marginBottom="24dp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolateString"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quantityLabelString" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/plusSignString"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:text="@string/quantityNumberString" />


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/minusSignString"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/orderSummaryLabelString" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/priceNumberString"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:layout_marginTop="16dp"
            android:text="@string/orderLabelString"
            />



    </LinearLayout>

</ScrollView>
